<?xml version="1.0" encoding="UTF-8"?>
<!--suppress ALL -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.ek9lang</groupId>
  <artifactId>compiler</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>compiler</name>
  <description>EK9 language compiler</description>
  <url>http://www.ek9lang.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- By adding enable-preview the jacoco code coverage fails -->
    <jvm.options></jvm.options>
    <surefire.memory>-Xmx1024m</surefire.memory>

    <java.version>23</java.version>
    <junit.version>5.8.2</junit.version>
    <antlr.version>4.13.1</antlr.version>
    <lsp4j.version>0.21.1</lsp4j.version>
    <asm.version>9.7.1</asm.version>

    <checkstyle-plugin.version>3.3.1</checkstyle-plugin.version>
    <compiler-plugin.version>3.12.1</compiler-plugin.version>
    <assembly-plugin.version>3.6.0</assembly-plugin.version>
    <versions-maven-plugin.version>2.16.1</versions-maven-plugin.version>
    <javadoc-plugin.version>3.6.3</javadoc-plugin.version>
    <release-plugin.version>3.0.1</release-plugin.version>
    <resources-plugin.version>3.3.1</resources-plugin.version>
    <site-plugin.version>4.0.0-M13</site-plugin.version>
    <surefire-report-plugin.version>3.2.5</surefire-report-plugin.version>
    <surefire-plugin.version>3.2.5</surefire-plugin.version>

  </properties>

  <modules>
    <module>compiler-tooling</module>
    <module>java-introspection</module>
    <module>ek9-lang</module>
    <module>compiler-main</module>
  </modules>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <type>pom</type>
        <version>${junit.version}</version>
        <scope>import</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>

    <resources>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <directory>src/main/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>src/test/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </testResource>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
    </testResources>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>${checkstyle-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>${assembly-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${versions-maven-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${javadoc-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>${release-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${resources-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>${site-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-report-plugin</artifactId>
          <version>${surefire-report-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.antlr</groupId>
          <artifactId>antlr4-maven-plugin</artifactId>
          <version>${antlr.version}</version>
        </plugin>

      </plugins>
    </pluginManagement>

    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <compilerArgs>
            <arg>${jvm.options}</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>${jvm.options} ${surefire.memory}</argLine>
          <properties>
            <configurationParameters>
              # Copied junit-platform.properties over to enable maven concurrent junit.
              junit.jupiter.execution.parallel.enabled = true
              junit.jupiter.execution.parallel.mode.default = concurrent
              junit.jupiter.execution.parallel.mode.classes.default = concurrent

              # This seems quicker than the dynamic approach
              junit.jupiter.execution.parallel.config.strategy = fixed
              junit.jupiter.execution.parallel.config.fixed.parallelism = 8
            </configurationParameters>
          </properties>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>

      </plugin>

    </plugins>

  </build>

</project>
